@@ -262,4 +262,5 @@ Up to 2009-01-02 (since 1.7.5 release) Denton Woods <doomwiz@users.sf.net>
 2009-01-27 Denton Woods <doomwiz@users.sf.net>
 	* il_bits.c (bseek): Changed check for return values of iseek.
 	* il_tpl.c: Added support for many more TPL data formats.
+	* il_tpl.c: Added support for color indexed data formats.
 	
